--- a/react_native_frontend/package.json
+++ b/react_native_frontend/package.json
@@ -10,10 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.32.0",
     "react-native-svg": "^15.4.0"
   },
   "devDependencies": {
