--- a/react_native_frontend/package.json
+++ b/react_native_frontend/package.json
@@ -15,6 +15,8 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-image-crop-picker": "^0.41.2",
+    "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-private-methods": "^7.24.7",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "0.74.85",
@@ -34,8 +37,11 @@
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "npm-force-resolutions": "^0.0.10",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
     "ts-jest": "^29.2.3",
