--- a/react_native_frontend/package.json
+++ b/react_native_frontend/package.json
@@ -15,6 +15,7 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-gesture-handler": "^2.18.0",
     "react-native-image-crop-picker": "^0.41.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.5",
