--- a/react_native_frontend/package.json
+++ b/react_native_frontend/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "native-base": "^3.4.28",
@@ -21,7 +22,8 @@
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
-    "react-native-svg": "^15.4.0"
+    "react-native-svg": "^15.4.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
